@@ -21,6 +21,8 @@ Extension Modules
 Library
 -------
 
+- the pickle module no longer uses the deprecated bin parameter.
+
 - the depecated statcache module was removed.
 
 - the shelve module no longer uses the deprecated binary parameter.
